@@ -151,6 +151,8 @@ Bug Fixes
 * Fixed test_deep_inheritance.py - setup classes in the correct order
   (required for Postgres 8.0+ which is strict about referential integrity).
 
+* Fixed a bug in DateValidator caused by datetime being a subclass of date.
+
 SQLObject 0.7.4
 ===============
 
